# actix_back

./: .env  Cargo.toml  config.toml  diesel.toml  file.txt
file/: file1.txt  file2.txt  file3.txt
migrations/2025-07-28-173719_create_products_table/: up.sql
migrations/2025-07-28-174725_add_email_to_users_table/: down.sql  up.sql
migrations/2025-07-28-175114_add_created_at_to_products_table/: down.sql  up.sql
migrations/2025-07-28-175320_rename_name_to_product_name_in_products_table/: down.sql  up.sql
src/: asynawait.rs  echo.rs  lib.rs  main.rs  model.rs  schema.rs
src/db/: mod.rs
src/errors/: mod.rs
src/extractors/: user.rs
src/handlers/: product.rs  user.rs
src/middleware/: auth_redirect.rs  execution_time.rs  jwt.rs  keyvalidator.rs  log.rs  mod.rs
src/models/: product.rs  user.rs
src/services/: product.rs  user.rs
tem/: file.txt
