[package]
name = "actix_back"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = { version = "4.11.0", features = ["openssl"] }
env_logger = "0.11.8"
openssl = "0.10.73"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
lazy_static = "1.4"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
