[package]
name = "actix_back"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = { version = "4.11.0", features = ["openssl"] }
env_logger = "0.11.8"
openssl = "0.10.73"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
lazy_static = "1.4"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
futures = "0.3.31"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1.3"
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
diesel = { version = "2.2.12", features = ["postgres", "r2d2"] }
chrono = "0.4.41"
